try to fix weird spacing

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -25,7 +25,6 @@ html{
   background-clip: content-box;
   margin-top: 0;
   width: 100%;
-  height: 100%;
   overflow: auto
 }
 
@@ -73,7 +72,6 @@ h2{
   border: 3px solid #B5D99C;
   line-height: 0;
   box-sizing: border-box;
-  padding-bottom: 25px;
 }
 
 .dark-picture{
